--- a/src/Dashboard/documentacionView.form
+++ b/src/Dashboard/documentacionView.form
@@ -61,15 +61,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="a0cb5" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
-                  <component id="6afd2" class="javax.swing.JTextField" binding="estadoTextField2" default-binding="true">
+                  <component id="8edc9" class="javax.swing.JLabel" binding="estadoLabel" default-binding="true">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -79,15 +71,7 @@
                       <text value="Estado"/>
                     </properties>
                   </component>
-                  <component id="641f9" class="javax.swing.JTextArea" binding="textArea2" default-binding="true">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
-                  <component id="5d50f" class="javax.swing.JTextField" binding="tipoTextField" default-binding="true">
+                  <component id="199b5" class="javax.swing.JLabel" binding="tipoLabel" default-binding="true">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -104,6 +88,22 @@
                     <properties>
                       <text value="Cargar Archivo"/>
                     </properties>
+                  </component>
+                  <component id="49b01" class="javax.swing.JTextField" binding="textArea2" default-binding="true">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="1e28" class="javax.swing.JTextField" binding="textArea1" default-binding="true">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
