--- a/src/Dashboard/homeView.form
+++ b/src/Dashboard/homeView.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Dashboard.homeView">
   <grid id="27dc6" binding="homePanel" layout-manager="GridLayoutManager" row-count="2" column-count="34" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="20" left="50" bottom="20" right="50"/>
     <constraints>
-      <xy x="20" y="20" width="818" height="696"/>
+      <xy x="20" y="20" width="887" height="696"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="3ae29" class="javax.swing.JTextField" binding="homeTextField" default-binding="true">
+      <component id="21c3a" class="javax.swing.JLabel" binding="homeLabel" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="34" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
